--- a/my-menu.html
+++ b/my-menu.html
@@ -93,6 +93,7 @@ paper-dropdown-menu {
 
     .dropbtna{
         width:180px;
+        background-color: #80deea;
     }
 
     paper-dropdown-menu {
