--- a/my-menu.html
+++ b/my-menu.html
@@ -93,7 +93,6 @@ paper-dropdown-menu {
 
     .dropbtna{
         width:180px;
-        background-color: #80deea;
     }
 
     paper-dropdown-menu {
@@ -108,7 +107,7 @@ paper-dropdown-menu {
 }
 
 </style>
-<template>
+<template style="background-color: #00acc1;">
     <iron-media-query query="(max-width:800px)" query-matches="{{isMobileNav}}"></iron-media-query>
 	<div class="dropbtna">
         <paper-dropdown-menu class="dropmenu" label="Scegli il tipo di segnalazione" no-label-float>
