--- a/my-menu.html
+++ b/my-menu.html
@@ -107,7 +107,7 @@ paper-dropdown-menu {
 }
 
 </style>
-<template style="background-color: #00acc1;">
+<template>
     <iron-media-query query="(max-width:800px)" query-matches="{{isMobileNav}}"></iron-media-query>
 	<div class="dropbtna">
         <paper-dropdown-menu class="dropmenu" label="Scegli il tipo di segnalazione" no-label-float>
