--- a/my-menu.html
+++ b/my-menu.html
@@ -89,7 +89,7 @@ paper-dropdown-menu {
 	}
 }
 
-@media only screen and (max-width: 400px), only screen and (max-device-width: 400px){
+/*@media only screen and (max-width: 400px), only screen and (max-device-width: 400px){
 
     .dropbtna{
         width:180px;
@@ -104,7 +104,7 @@ paper-dropdown-menu {
             width:160px;
         };
     }
-}
+}*/
 
 </style>
 <template>
