--- a/my-menu.html
+++ b/my-menu.html
@@ -20,7 +20,7 @@
     background-color: #e1382d;
 	position:relative;
 	width:400px;
-	height:50px;
+	height:50pt;
     color: white;
     font-size: 16px;
 	border-radius:30px;
@@ -89,7 +89,7 @@ paper-dropdown-menu {
 	}
 }
 
-/*@media only screen and (max-width: 400px), only screen and (max-device-width: 400px){
+@media only screen and (max-width: 400px), only screen and (max-device-width: 400px){
 
     .dropbtna{
         width:180px;
@@ -104,7 +104,7 @@ paper-dropdown-menu {
             width:160px;
         };
     }
-}*/
+}
 
 </style>
 <template>
