--- a/photo-fab.html
+++ b/photo-fab.html
@@ -6,7 +6,7 @@
 <link rel="import" href="bower_components/paper-button/paper-button.html">
 <link rel="import" href="bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="bower_components/iron-icons/iron-icons.html">
-<link rel="import" href="bower_components/iron-icons/device-icons.html">
+<link rel="import" href="bower_components/iron-icons/image-icons.html">
 <link rel="import" href="bower_components/iron-media-query/iron-media-query.html">
 <link rel="import" href="bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="bower_components/paper-item/paper-item.html">
@@ -14,48 +14,27 @@
 <link rel="import" href="bower_components/paper-menu/paper-menu.html">
 <link rel="import" href="bower_components/iron-list/iron-list.html">
 
+<script src="jquery-3.1.0.min.js"></script>
+
 <dom-module id="photo-fab">
 <style>
-
+    .camerafab{
+        --paper-fab-mini:true;
+        cursor: pointer;
+        background-color:#e1382d;
+    }
 </style>
 <template>
-
+    <paper-fab id="camera" class="camerafab" icon="image:camera-alt" on-tap="handleTap"></paper-fab>
+    <input id="hidden" class="upload" type="file" accept="image/*"/>
 </template>
-
-</dom-module>
 <script>
 	Polymer({
 		is: 'photo-fab',
 
-		properties:{
-			admin: String
-		},
-
-		ready: function() {
-			if(this.admin === "is"){
-				this.menuItems = [
-					{name: 'BUCHE'},
-					{name: 'SICUREZZA URBANA'},
-					{name: 'RIFIUTI'},
-					{name: 'PROTEZIONE CIVILE'},
-					{name: 'INCIDENTI STRADALI'},
-					{name: 'CAMPI NOMADI'}
-				];
-			}else{
-				this.menuItems = [
-					{name: 'BUCHE'},
-					{name: 'RIFIUTI'},
-					{name: 'PROTEZIONE CIVILE'}
-				];
-			}
-      	},
-
-		selected: function(event, data){
-			this.selectedItem = event.target.selected;
-		},
-
-		getSelectedElement: function() {
-      		return this.selectedItem;
-    	}
+		handleTap: function(){
+            this.$.hidden.click();
+        }
 	});
 </script>
+</dom-module>
