--- a/photo-fab.html
+++ b/photo-fab.html
@@ -23,6 +23,9 @@
         cursor: pointer;
         background-color:#e1382d;
     }
+    .upload{
+        display: none;
+    }
 </style>
 <template>
     <paper-fab id="camera" class="camerafab" icon="image:camera-alt" on-tap="handleTap"></paper-fab>
