--- a/photo-fab.html
+++ b/photo-fab.html
@@ -21,8 +21,8 @@
 
 </style>
 <template>
-    <paper-fab id="camera" class="camerafab" icon="image:camera-alt" on-tap="handleTap"></paper-fab>
-    <input id="hidden" class="upload" type="file" accept="image/*"/>
+    <paper-fab id="camera" icon="image:camera-alt" on-tap="handleTap"></paper-fab>
+    <input id="hidden" type="file" accept="image/*"/>
 </template>
 <script>
 	Polymer({
