--- a/photo-fab.html
+++ b/photo-fab.html
@@ -18,7 +18,12 @@
 
 <dom-module id="photo-fab">
 <style>
-
+    #camera{
+        background-color:#e1382d;
+    }
+    #hidden{
+        display: none;
+    }
 </style>
 <template>
     <paper-fab id="camera" icon="image:camera-alt" on-tap="handleTap"></paper-fab>
