--- a/photo-fab.html
+++ b/photo-fab.html
@@ -41,7 +41,7 @@
             this.$.hidden.click();
         },
 
-        ready: function () {
+        WebComponentsReady: function () {
           alert('ready');
         }
 	});
