--- a/my-table.html
+++ b/my-table.html
@@ -23,7 +23,7 @@
 
 </style>
 <template>
-    <paper-datatable-card page-size="2" pageSizeOptions="[2]" header="{{mHeader}}">
+    <paper-datatable-card header="{{mHeader}}">
         <paper-datatable data="{{data}}" selectable multi-selection>
             <paper-datatable-column header="Data" property="data" sortable>
             </paper-datatable-column>
