--- a/my-table.html
+++ b/my-table.html
@@ -46,12 +46,12 @@
 		ready: function() {
             this.mHeader = "test header";
             this.data = [
-                {data: 20-08-1994, commento: 'Frozen yogurt'},
-                {data: 20-09-1940, commento: 'Ice cream sandwich'},
-                {data: 24-03-2015, commento: 'Eclair'},
-                {data: 10-01-2090, commento: 'Cupcake'},
-                {data: 01-12-2019, commento: 'Gingerbread'},
-                {data: 05-05-2005, commento: 'Jelly bean'}
+                {id:0, data: '20-08-1994', commento: 'Frozen yogurt'},
+                {id:1, data: '20-09-1940', commento: 'Ice cream sandwich'},
+                {id:2, data: '24-03-2015', commento: 'Eclair'},
+                {id:3, data: '10-01-2090', commento: 'Cupcake'},
+                {id:4, data: '01-12-2019', commento: 'Gingerbread'},
+                {id:5, data: '05-05-2005', commento: 'Jelly bean'}
             ];
       	}
 	});
