--- a/my-table.html
+++ b/my-table.html
@@ -10,6 +10,9 @@
 <link rel="import" href="bower_components/iron-media-query/iron-media-query.html">
 <link rel="import" href="bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="bower_components/paper-datatable/paper-datatable.html">
+<link rel="import" href="bower_components/paper-datatable/paper-datatable-styles.html">
+<link rel="import" href="bower_components/paper-datatable/paper-datatable-edit-dialog.html">
+<link rel="import" href="bower_components/paper-datatable/index.html">
 <link rel="import" href="bower_components/paper-datatable/my-datatable-card.html">
 <link rel="import" href="bower_components/paper-datatable/paper-datatable-card.html">
 <link rel="import" href="bower_components/paper-datatable/paper-datatable-column.html">
