--- a/my-table.html
+++ b/my-table.html
@@ -26,7 +26,7 @@
 
 </style>
 <template>
-    <paper-datatable-card page-size="2" id-property="id" header="{{mHeader}}">
+    <paper-datatable-card page-size="2" header="{{mHeader}}">
         <paper-datatable data="{{data}}">
             <paper-datatable-column header="Data" property="data" sortable>
             </paper-datatable-column>
