--- a/my-table.html
+++ b/my-table.html
@@ -25,8 +25,8 @@
 
 </style>
 <template>
-    <paper-datatable-card page-size="2" id-property="id" header="{{mHeader}}">
-        <paper-datatable data="{{data}}">
+    <paper-datatable-card page-size="2" data-source="{{data}}" id-property="id" header="{{mHeader}}">
+        <paper-datatable>
             <paper-datatable-column header="Data" property="data" sortable>
             </paper-datatable-column>
             <paper-datatable-column header="Commento" property="commento" sortable>
