--- a/my-table.html
+++ b/my-table.html
@@ -50,8 +50,7 @@
 		ready: function() {
             this.mHeader = "test header";
             this.data = {
-                queryForIds: 16,
-                getByIds: [1, "data", "testo"],
+                get: [1, "data", "testo"],
                 length: 16
             };
       	}
