--- a/my-table.html
+++ b/my-table.html
@@ -25,7 +25,7 @@
 
 </style>
 <template>
-    <paper-datatable-card page-size="2" data-source="{{data}}" id-property="id" header="{{mHeader}}">
+    <my-datatable-card page-size="2" data-source="{{data}}" id-property="id" header="{{mHeader}}">
         <paper-datatable selectable>
             <paper-datatable-column header="ID" property="id" sortable>
             </paper-datatable-column>
@@ -34,7 +34,7 @@
             <paper-datatable-column header="Commento" property="commento" sortable>
             </paper-datatable-column>
         </paper-datatable>
-    </paper-datatable-card>
+    </my-datatable-card>
 </template>
 
 </dom-module>
