--- a/my-table.html
+++ b/my-table.html
@@ -52,7 +52,7 @@
 
             var myData = [];
             for (var i=0; i<142; i++) {
-                var id = Math.random() * 24;
+                var id = Math.round(Math.random() * 24);
                 var rating = Math.round(Math.random() * 2000)+1000;
                 myData.push({
                     id: i,
