--- a/my-table.html
+++ b/my-table.html
@@ -26,7 +26,7 @@
 </style>
 <template>
     <my-datatable-card page-size="2" data-source="{{data}}" id-property="id" header="{{mHeader}}">
-        <paper-datatable selectable>
+        <paper-datatable resize-behavior="fixed">
             <paper-datatable-column header="ID" property="id" sortable>
             </paper-datatable-column>
             <paper-datatable-column header="Data" property="data" sortable>
