--- a/my-table.html
+++ b/my-table.html
@@ -29,7 +29,7 @@
         <paper-datatable resize-behavior="dynamic-columns">
             <paper-datatable-column resize-priority="-1" width="100pt" header="Data" property="data" sortable>
             </paper-datatable-column>
-            <paper-datatable-column resize-priority="-1" header="Commento" property="commento" sortable>
+            <paper-datatable-column resize-priority="-1" width="200pt" header="Commento" property="commento" sortable>
             </paper-datatable-column>
         </paper-datatable>
     </my-datatable-card>
