--- a/my-table.html
+++ b/my-table.html
@@ -48,6 +48,7 @@
 
 		ready: function() {
             this.mHeader = "test header";
+            this.id = 2;
 
             $.ajax ( {
                 url: 'get-update.php',
