--- a/my-table.html
+++ b/my-table.html
@@ -43,12 +43,11 @@
 		properties:{
 			data: Object,
             mHeader: String,
-            id: Number
+            mid: Number
 		},
 
 		ready: function() {
             this.mHeader = "test header";
-            this.id = 2;
 
             $.ajax ( {
                 url: 'get-update.php',
