--- a/my-table.html
+++ b/my-table.html
@@ -56,69 +56,50 @@
                 success: function(data){
                     var result = JSON.parse(data);
                     alert(result[0]['data']+" "+result[0]['commento']);
+                    var myData = [];
+                    for (var i=0; i<result.length; i++) {
+                        myData.push({
+                            data: result[i]['data'],
+                            commento: result[i]['commento']
+                        });
+                    }
+                    window.myData = myData;
+
+                    this.data = {
+                        get: function(sort, page, pageSize){
+                            console.log('just once? :/');
+                            return new Promise(function(resolve, reject){
+                                myData.sort(function(a,b){
+                                    if(sort.direction == "desc"){
+                                        var c = a;
+                                        a = b;
+                                        b = c;
+                                    }
+                                    if(a[sort.property] > b[sort.property]) return 1;
+                                    if(a[sort.property] < b[sort.property]) return -1;
+                                    return 0;
+                                });
+                                resolve(myData.slice((page-1)*pageSize, page*pageSize));
+                            });
+                        },
+                        set: function(item, property, value){
+                            return new Promise(function(resolve, reject){
+                                console.info("a save was triggered", [item, property, value]);
+                                if(item.id === '__new__'){
+                                }else{
+                                    var myItem = myData.find(function(thisItem){
+                                        return thisItem.id == item.id;
+                                    });
+                                    myItem[property] = value;
+                                    resolve(true);
+                                }
+                            });
+
+                        },
+                        length:myData.length
+                    };
                 }
             });
-
-            var myData = [];
-            for (var i=0; i<142; i++) {
-                var id = Math.round(Math.random() * 24);
-                var rating = Math.round(Math.random() * 2000)+1000;
-                myData.push({
-                    id: i,
-                    data: "20-08-2016 "+id+":00",
-                    commento: "Segnalazione confermata "+ i
-                });
-            }
-            window.myData = myData;
-
-            this.data = {
-                get: function(sort, page, pageSize){
-                    console.log('just once? :/');
-                    return new Promise(function(resolve, reject){
-                        myData.sort(function(a,b){
-                            if(sort.direction == "desc"){
-                                var c = a;
-                                a = b;
-                                b = c;
-                            }
-                            if(a[sort.property] > b[sort.property]) return 1;
-                            if(a[sort.property] < b[sort.property]) return -1;
-                            return 0;
-                        });
-                        resolve(myData.slice((page-1)*pageSize, page*pageSize));
-                    });
-                },
-                set: function(item, property, value){
-                    return new Promise(function(resolve, reject){
-                        console.info("a save was triggered", [item, property, value]);
-                        if(item.id === '__new__'){
-                            //validate item, if invalid (and thus not savable yet) reject, otherwise return it's new id
-                            console.warn('this is for the time being deprecated');
-                            /*
-                             if(item.author.first.length > 0 && item.author.last.length > 0){
-                             console.log('trigger save');
-                             var id = Math.round(Math.random() * 10000);
-
-                             item.id = id;
-                             myData.push(item);
-                             app.set('data.length', myData.length);
-                             resolve(id);
-                             }else{
-                             console.log('no luck yet');
-                             reject();
-                             }*/
-                        }else{
-                            var myItem = myData.find(function(thisItem){
-                                return thisItem.id == item.id;
-                            });
-                            myItem[property] = value;
-                            resolve(true);
-                        }
-                    });
-
-                },
-                length:myData.length
-            };
       	}
 	});
 </script>
