--- a/my-table.html
+++ b/my-table.html
@@ -57,7 +57,7 @@
                     var result = JSON.parse(data);
                     var myData = [];
                     for (var i=0; i<result.length; i++) {
-                        alert(this.mid+"  "+i);
+                        alert(result[i]['data']+"  "+result[i]['commento']);
                         myData.push({
                             data: result[i]['data'],
                             commento: result[i]['commento']
