--- a/my-table.html
+++ b/my-table.html
@@ -66,7 +66,7 @@
                     }
                     window.myData = myData;
 
-                    app.data = {
+                    this.app.data = {
                         get: function(sort, page, pageSize){
                             console.log('just once? :/');
                             return new Promise(function(resolve, reject){
