--- a/my-table.html
+++ b/my-table.html
@@ -48,58 +48,56 @@
 
 		ready: function() {
             this.mHeader = "test header";
-
-            $.ajax ( {
-                url: 'get-update.php',
-                type: 'POST',
-                data: {'id': this.mid},
-                success: function(data){
-                    var result = JSON.parse(data);
-                    var myData = [];
-                    for (var i=0; i<15; i++) {
-                        myData.push({
-                            id: i,
-                            data: "data",
-                            commento: "commento"
-                        });
-                    }
-                    window.myData = myData;
-
-                    this.data = {
-                        get: function(sort, page, pageSize){
+            this.data = {
+                get: function(sort, page, pageSize){
+                    $.ajax ({
+                        url: 'get-update.php',
+                        type: 'POST',
+                        data: {'id': this.mid},
+                        success: function (data) {
+                            var result = JSON.parse(data);
+                            var myData = [];
+                            for (var i = 0; i < 15; i++) {
+                                myData.push({
+                                    id: i,
+                                    data: "data",
+                                    commento: "commento"
+                                });
+                            }
+                            window.myData = myData;
                             console.log('just once? :/');
-                            return new Promise(function(resolve, reject){
-                                myData.sort(function(a,b){
-                                    if(sort.direction == "desc"){
+                            return new Promise(function (resolve, reject) {
+                                myData.sort(function (a, b) {
+                                    if (sort.direction == "desc") {
                                         var c = a;
                                         a = b;
                                         b = c;
                                     }
-                                    if(a[sort.property] > b[sort.property]) return 1;
-                                    if(a[sort.property] < b[sort.property]) return -1;
+                                    if (a[sort.property] > b[sort.property]) return 1;
+                                    if (a[sort.property] < b[sort.property]) return -1;
                                     return 0;
                                 });
-                                resolve(myData.slice((page-1)*pageSize, page*pageSize));
+                                resolve(myData.slice((page - 1) * pageSize, page * pageSize));
                             });
-                        },
-                        set: function(item, property, value){
-                            return new Promise(function(resolve, reject){
-                                console.info("a save was triggered", [item, property, value]);
-                                if(item.id === '__new__'){
-                                }else{
-                                    var myItem = myData.find(function(thisItem){
-                                        return thisItem.id == item.id;
-                                    });
-                                    myItem[property] = value;
-                                    resolve(true);
-                                }
+                        }
+                    });
+                },
+                set: function(item, property, value){
+                    return new Promise(function(resolve, reject){
+                        console.info("a save was triggered", [item, property, value]);
+                        if(item.id === '__new__'){
+                        }else{
+                            var myItem = myData.find(function(thisItem){
+                                return thisItem.id == item.id;
                             });
+                            myItem[property] = value;
+                            resolve(true);
+                        }
+                    });
 
-                        },
-                        length:2
-                    };
-                }
-            });
+                },
+                length:2
+            };
             this.reload();
       	}
 	});
