--- a/my-table.html
+++ b/my-table.html
@@ -115,7 +115,7 @@
                                 }
                             }
                         };
-                        httpRequest.open('GET', 'http://api.randomuser.me/?nat=US&results='+pageSize);
+                        httpRequest.open('GET', 'https://api.randomuser.me/?nat=US&results='+pageSize);
                         httpRequest.send();
                     });
                 },
