--- a/my-table.html
+++ b/my-table.html
@@ -85,6 +85,7 @@
                 get: function(sort, page, pageSize){
                     return new Promise(function(resolve, reject){
                         var httpRequest = new XMLHttpRequest();
+                        httpRequest.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
                         httpRequest.onreadystatechange = function() {
                             if (httpRequest.readyState === XMLHttpRequest.DONE) {
                                 if (httpRequest.status === 200) {
@@ -115,8 +116,8 @@
                                 }
                             }
                         };
-                        httpRequest.open('GET', 'https://api.randomuser.me/?nat=US&results='+pageSize);
-                        httpRequest.send();
+                        httpRequest.open('POST', 'get-update.php');
+                        httpRequest.send('id=2');
                     });
                 },
                 set: function(item, property, value){
