--- a/my-table.html
+++ b/my-table.html
@@ -93,8 +93,8 @@
                                     for (var i = 0; i < 15; i++) {
                                         myData.push({
                                             id: i,
-                                            data: "data",
-                                            commento: "commento"
+                                            data: result[i]['data'],
+                                            commento: result[i]['commento']
                                         });
                                     }
                                     window.myData = myData;
