--- a/my-table.html
+++ b/my-table.html
@@ -115,7 +115,7 @@
                         };
                         httpRequest.open('POST', 'get-update.php');
                         httpRequest.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-                        httpRequest.send('id=2');
+                        httpRequest.send('id='+this.mid);
                     });
                 },
                 set: function(item, property, value){
