--- a/my-table.html
+++ b/my-table.html
@@ -43,46 +43,12 @@
 		properties:{
 			data: Object,
             mHeader: String,
-            mid: Number,
-            length: Number
+            mid: Number
 		},
 
 		ready: function() {
             this.mHeader = "test header";
             this.data = {
-                /*get: function(sort, page, pageSize){
-                    $.ajax ({
-                        url: 'get-update.php',
-                        type: 'POST',
-                        data: {'id': this.mid},
-                        success: function (data) {
-                            var result = JSON.parse(data);
-                            var myData = [];
-                            for (var i = 0; i < 15; i++) {
-                                myData.push({
-                                    id: i,
-                                    data: "data",
-                                    commento: "commento"
-                                });
-                            }
-                            window.myData = myData;
-                            console.log('just once? :/');
-                            return new Promise(function (resolve, reject) {
-                                myData.sort(function (a, b) {
-                                    if (sort.direction == "desc") {
-                                        var c = a;
-                                        a = b;
-                                        b = c;
-                                    }
-                                    if (a[sort.property] > b[sort.property]) return 1;
-                                    if (a[sort.property] < b[sort.property]) return -1;
-                                    return 0;
-                                });
-                                resolve(myData.slice((page - 1) * pageSize, page * pageSize));
-                            });
-                        }
-                    });
-                },*/
                 get: function(sort, page, pageSize){
                     return new Promise(function(resolve, reject){
                         var httpRequest = new XMLHttpRequest();
@@ -99,7 +65,6 @@
                                         });
                                     }
                                     window.myData = myData;
-                                    this.length = myData.length;
                                     console.log('just once? :/');
                                     myData.sort(function (a, b) {
                                         if (sort.direction == "desc") {
@@ -134,7 +99,7 @@
                     });
 
                 },
-                length: this.length
+                length: myData.length
             };
       	}
 	});
