--- a/my-table.html
+++ b/my-table.html
@@ -99,7 +99,7 @@
                     });
 
                 },
-                length: myData.length
+                length: 2
             };
       	}
 	});
