--- a/my-table.html
+++ b/my-table.html
@@ -99,7 +99,23 @@
                     });
 
                 },
-                length: 2
+                length: function(){
+                    return new Promise(function(resolve, reject){
+                        var httpRequest = new XMLHttpRequest();
+                        httpRequest.onreadystatechange = function() {
+                            if (httpRequest.readyState === XMLHttpRequest.DONE) {
+                                if (httpRequest.status === 200) {
+                                    var result = httpRequest.responseText;
+                                    alert(result);
+                                    resolve(result);
+                                }
+                            }
+                        };
+                        httpRequest.open('POST', 'get-size.php');
+                        httpRequest.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+                        httpRequest.send('id='+this.mid);
+                    });
+                }
             };
       	}
 	});
