--- a/my-table.html
+++ b/my-table.html
@@ -101,7 +101,7 @@
                 },
                 length: function(){
                     return new Promise(function(resolve, reject){
-                        var httpRequest = new XMLHttpRequest();
+                        /*var httpRequest = new XMLHttpRequest();
                         console.log("before request");
                         httpRequest.onreadystatechange = function() {
                             if (httpRequest.readyState === XMLHttpRequest.DONE) {
@@ -114,7 +114,8 @@
                         };
                         httpRequest.open('POST', 'get-size.php');
                         httpRequest.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-                        httpRequest.send('id='+this.mid);
+                        httpRequest.send('id='+this.mid);*/
+                        resolve(2);
                     });
                 }
             };
