--- a/my-table.html
+++ b/my-table.html
@@ -65,7 +65,7 @@
                                         });
                                     }
                                     window.myData = myData;
-                                    data.set('length', myData.length);
+                                    this.data.set('length', myData.length);
                                     console.log('just once? :/');
                                     myData.sort(function (a, b) {
                                         if (sort.direction == "desc") {
