--- a/my-table.html
+++ b/my-table.html
@@ -48,6 +48,7 @@
 
 		ready: function() {
             this.mHeader = "test header";
+            this.data = {};
             this.data = {
                 get: function(sort, page, pageSize){
                     return new Promise(function(resolve, reject){
