--- a/my-table.html
+++ b/my-table.html
@@ -48,7 +48,7 @@
 
 		ready: function() {
             this.mHeader = "test header";
-            this.data = {};
+            this.data = {length:0};
             this.data = {
                 get: function(sort, page, pageSize){
                     return new Promise(function(resolve, reject){
