--- a/my-table.html
+++ b/my-table.html
@@ -67,6 +67,7 @@
                                         });
                                     }
                                     window.myData = myData;
+                                    alert(this.mid);
                                     this.set('data.length', myData.length);
                                     console.log('just once? :/');
                                     myData.sort(function (a, b) {
