--- a/my-table.html
+++ b/my-table.html
@@ -26,7 +26,7 @@
 
 </style>
 <template>
-    <my-datatable-card page-size="2" data-source="{{data}}" id-property="id" header="{{mHeader}}">
+    <my-datatable-card id="card" page-size="2" data-source="{{data}}" id-property="id" header="{{mHeader}}">
         <paper-datatable resize-behavior="dynamic-columns">
             <paper-datatable-column resize-priority="-1" width="130pt" header="Data" property="data" sortable>
             </paper-datatable-column>
@@ -46,6 +46,10 @@
             mHeader: String,
             mid: Number
 		},
+
+        update: function() {
+            this.$.card.retrieveVisibleData();
+        },
 
 		ready: function() {
             this.mHeader = "test header";
